--- a/tianhaoz/pubspec.yaml
+++ b/tianhaoz/pubspec.yaml
@@ -15,8 +15,5 @@ dev_dependencies:
     sdk: flutter
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - "assets/avatar.png"
