--- a/packages/site_logo/pubspec.yaml
+++ b/packages/site_logo/pubspec.yaml
@@ -1,8 +1,7 @@
 name: site_logo
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/tianhaoz95/tianhaoz-flutter
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
